# ZPlugin_importFolder

./: CMakeLists.txt  build.sh  configureCMake.sh  main.cpp  vcpkg.json
ZPlugs64/: ZImportFolder_2022.txt  ZImportFolder_2022.zsc  importFolder_2022.txt  importFolder_2022.zsc
ZPlugs64/importFolder_2022/: convert.lib
plugin/: CMakeLists.txt
plugin/include/: convert.h
plugin/src/: convert.cpp
